# django-dirtyfields

./: .flake8  .gitignore  .readthedocs.yaml  .travis.yml  AUTHORS  CLASSIFIERS.txt  ChangeLog.rst  MANIFEST.in  README.md  README.rst  SECURITY.md  pyproject.toml  pytest.ini  requirements.pip  requirements.txt  runtests.py  setup.cfg  setup.py  tests-requirements.txt  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql-analysis.yml  linting.yml  publish-to-pypi.yml  security-linting.yml  tests.yml
docs/: Makefile  advanced.rst  conf.py  contributing.rst  credits.rst  customisation.rst  description.rst  index.rst  quickstart.rst  requirements.txt
docs/_ext/: djangodocs.py
docs/_templates/: dirtyfields-links.html
example_app/: dirtyfields.db  settings.py  urls.py
example_app/testing_app/: models.py  tests.py
src/: __init__.py
src/dirtyfields/: __init__.py  compare.py  compat.py  decorators.py  dirtyfields.py  django_patches.py  exceptions.py
tests/: __init__.py  compat.py  django_settings.py  models.py  postgresql_django_settings.py  test_auto_now.py  test_core.py  test_django.py  test_field_now.py  test_json_field.py  test_json_field_third_party.py  test_m2m_fields.py  test_memory_leak.py  test_non_regression.py  test_postgresql_specific.py  test_save_fields.py  test_specified_fields.py  test_timezone_aware_fields.py  tests.py  utils.py
tests/files/: bar.txt  foo.txt
