[build-system]
requires = ["setuptools ~= 63.4"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
django_find_project = false
DJANGO_SETTINGS_MODULE = 'tests.django_settings'
filterwarnings = [
    'error',
    "default:Using or importing the ABCs from 'collections':DeprecationWarning",  # Remove when Python3.7 dropped
]

[tool.coverage.run]
branch = true
source = ['dirtyfields']

[tool.coverage.report]
show_missing = true
precision = 2
