[build-system]
requires = ["setuptools ~= 63.4"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
django_find_project = false
DJANGO_SETTINGS_MODULE = 'tests.django_settings'
filterwarnings = [
    'error',
]

[tool.coverage.run]
branch = true
source = ['dirtyfields']

[tool.coverage.report]
show_missing = true
precision = 2
