[metadata]
name = django-dirtyfields
version = attr: dirtyfields.__version__
url = https://github.com/romgar/django-dirtyfields
project_urls =
    Documentation=https://django-dirtyfields.readthedocs.io/
    Changelog=https://github.com/romgar/django-dirtyfields/blob/develop/ChangeLog.rst
author = Romain Garrigues
author_email = romain.garrigues.cs@gmail.com
maintainer = Lincoln Puzey
maintainer_email = lincoln@puzey.dev
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Framework :: Django
    Framework :: Django :: 1.11
    Framework :: Django :: 2.0
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
license = BSD
license_files = LICENSE
description = Tracking dirty fields on a Django model instance.
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
packages = find:
package_dir =
    =src
include_package_data = true
python_requires = >=3.6
install_requires =
    Django >= 1.11

[options.packages.find]
where = src
